// Vitest Snapshot v1

exports[`#updateFilesFn > Checks pass by reference, finding the right files, single glob 1`] = `
{
  "all": [
    "test/elder.config.ts",
    "test/build/build.js",
    "test/build/cleanPublic.js",
    "test/build/hooks.js",
    "test/build/server.js",
    "test/build/shortcodes.js",
    "test/build/tsconfig.tsbuildinfo",
    "test/build/components/BlogTeaser.svelte",
    "test/build/components/Clock.svelte",
    "test/build/components/DisplayHooks.svelte",
    "test/build/components/HookDetail.svelte",
    "test/build/layouts/Layout.svelte",
    "test/build/routes/advanced/1.basic-route.md",
    "test/build/routes/advanced/Advanced.svelte",
    "test/build/routes/advanced/basic-route.md",
    "test/build/routes/advanced/data-plumbing.md",
    "test/build/routes/advanced/hooks.md",
    "test/build/routes/advanced/partial-hydration.md",
    "test/build/routes/advanced/plugins.md",
    "test/build/routes/advanced/prop-compression.md",
    "test/build/routes/advanced/route.js",
    "test/build/routes/advanced/routing.md",
    "test/build/routes/advanced/shortcodes.md",
    "test/build/routes/advanced/ssr.md",
    "test/build/routes/advanced/stacks.md",
    "test/build/routes/blog/Blog.svelte",
    "test/build/routes/blog/getting-started.md",
    "test/build/routes/blog/home.md",
    "test/build/routes/blog/how-to-build-a-blog-with-elderjs.md",
    "test/build/routes/blog/is-elderjs-right-for-you.md",
    "test/build/routes/blog/route.js",
    "test/build/routes/hooks/Hooks.svelte",
    "test/build/routes/hooks/route.js",
    "test/build/routes/simple/Simple.svelte",
    "test/build/routes/simple/route.js",
    "test/build/routes/ssr/Ssr.svelte",
    "test/build/routes/ssr/route.js",
    "test/___ELDER___/compiled/components/BlogTeaser.js",
    "test/___ELDER___/compiled/components/Clock.js",
    "test/___ELDER___/compiled/components/DisplayHooks.js",
    "test/___ELDER___/compiled/components/HookDetail.js",
    "test/___ELDER___/compiled/layouts/Layout.js",
    "test/___ELDER___/compiled/routes/advanced/Advanced.js",
    "test/___ELDER___/compiled/routes/blog/Blog.js",
    "test/___ELDER___/compiled/routes/hooks/Hooks.js",
    "test/___ELDER___/compiled/routes/simple/Simple.js",
    "test/___ELDER___/compiled/routes/ssr/Ssr.js",
    "test/public/_elderjs/svelte/chunks/chunk.BFER7IGE.js",
    "test/public/_elderjs/svelte/chunks/chunk.VLX2NJWY.js",
    "test/public/_elderjs/svelte/components/BlogTeaser.3AUXOWM7.js",
    "test/public/_elderjs/svelte/components/Clock.RXDT3EO6.js",
    "test/public/_elderjs/svelte/components/DisplayHooks.IHTGJQ3I.js",
    "test/public/_elderjs/svelte/components/HookDetail.MCOLEGK2.js",
    "test/public/style copy.css",
    "test/public/style.css",
    "test/public/_elderjs/assets/svelte-3bcbf5032efa392596bf0a3f1bdcce7e.css",
  ],
  "client": [
    "test/public/_elderjs/svelte/chunks/chunk.BFER7IGE.js",
    "test/public/_elderjs/svelte/chunks/chunk.VLX2NJWY.js",
    "test/public/_elderjs/svelte/components/BlogTeaser.3AUXOWM7.js",
    "test/public/_elderjs/svelte/components/Clock.RXDT3EO6.js",
    "test/public/_elderjs/svelte/components/DisplayHooks.IHTGJQ3I.js",
    "test/public/_elderjs/svelte/components/HookDetail.MCOLEGK2.js",
  ],
  "hooks": "test/build/hooks.js?hash=test",
  "publicCssFile": "/_elderjs/assets/svelte-3bcbf5032efa392596bf0a3f1bdcce7e.css",
  "routes": [
    "test/build/routes/advanced/route.js?hash=test",
    "test/build/routes/blog/route.js?hash=test",
    "test/build/routes/hooks/route.js?hash=test",
    "test/build/routes/simple/route.js?hash=test",
    "test/build/routes/ssr/route.js?hash=test",
  ],
  "server": [
    "test/___ELDER___/compiled/components/BlogTeaser.js?hash=test",
    "test/___ELDER___/compiled/components/Clock.js?hash=test",
    "test/___ELDER___/compiled/components/DisplayHooks.js?hash=test",
    "test/___ELDER___/compiled/components/HookDetail.js?hash=test",
    "test/___ELDER___/compiled/layouts/Layout.js?hash=test",
    "test/___ELDER___/compiled/routes/advanced/Advanced.js?hash=test",
    "test/___ELDER___/compiled/routes/blog/Blog.js?hash=test",
    "test/___ELDER___/compiled/routes/hooks/Hooks.js?hash=test",
    "test/___ELDER___/compiled/routes/simple/Simple.js?hash=test",
    "test/___ELDER___/compiled/routes/ssr/Ssr.js?hash=test",
  ],
  "shortcodes": "test/build/shortcodes.js?hash=test",
}
`;

exports[`#updateFilesFn > Checks pass by reference, finding the right files, single glob 2`] = `
{
  "all": [
    "test/elder.config.ts",
    "test/build/build.js",
    "test/build/cleanPublic.js",
    "test/build/hooks.js",
    "test/build/server.js",
    "test/build/shortcodes.js",
    "test/build/tsconfig.tsbuildinfo",
    "test/build/components/BlogTeaser.svelte",
    "test/build/components/Clock.svelte",
    "test/build/components/DisplayHooks.svelte",
    "test/build/components/HookDetail.svelte",
    "test/build/layouts/Layout.svelte",
    "test/build/routes/advanced/1.basic-route.md",
    "test/build/routes/advanced/Advanced.svelte",
    "test/build/routes/advanced/basic-route.md",
    "test/build/routes/advanced/data-plumbing.md",
    "test/build/routes/advanced/hooks.md",
    "test/build/routes/advanced/partial-hydration.md",
    "test/build/routes/advanced/plugins.md",
    "test/build/routes/advanced/prop-compression.md",
    "test/build/routes/advanced/route.js",
    "test/build/routes/advanced/routing.md",
    "test/build/routes/advanced/shortcodes.md",
    "test/build/routes/advanced/ssr.md",
    "test/build/routes/advanced/stacks.md",
    "test/build/routes/blog/Blog.svelte",
    "test/build/routes/blog/getting-started.md",
    "test/build/routes/blog/home.md",
    "test/build/routes/blog/how-to-build-a-blog-with-elderjs.md",
    "test/build/routes/blog/is-elderjs-right-for-you.md",
    "test/build/routes/blog/route.js",
    "test/build/routes/hooks/Hooks.svelte",
    "test/build/routes/hooks/route.js",
    "test/build/routes/simple/Simple.svelte",
    "test/build/routes/simple/route.js",
    "test/build/routes/ssr/Ssr.svelte",
    "test/build/routes/ssr/route.js",
    "test/___ELDER___/compiled/components/BlogTeaser.js",
    "test/___ELDER___/compiled/components/Clock.js",
    "test/___ELDER___/compiled/components/DisplayHooks.js",
    "test/___ELDER___/compiled/components/HookDetail.js",
    "test/___ELDER___/compiled/layouts/Layout.js",
    "test/___ELDER___/compiled/routes/advanced/Advanced.js",
    "test/___ELDER___/compiled/routes/blog/Blog.js",
    "test/___ELDER___/compiled/routes/hooks/Hooks.js",
    "test/___ELDER___/compiled/routes/simple/Simple.js",
    "test/___ELDER___/compiled/routes/ssr/Ssr.js",
    "test/public/_elderjs/svelte/chunks/chunk.BFER7IGE.js",
    "test/public/_elderjs/svelte/chunks/chunk.VLX2NJWY.js",
    "test/public/_elderjs/svelte/components/BlogTeaser.3AUXOWM7.js",
    "test/public/_elderjs/svelte/components/Clock.CHANGED.js",
    "test/public/_elderjs/svelte/components/DisplayHooks.IHTGJQ3I.js",
    "test/public/_elderjs/svelte/components/HookDetail.MCOLEGK2.js",
    "test/public/style copy.css",
    "test/public/style.css",
    "test/public/_elderjs/assets/svelte-3bcbf5032efa392596bf0a3f1bdcce7e.css",
  ],
  "client": [
    "test/public/_elderjs/svelte/chunks/chunk.BFER7IGE.js",
    "test/public/_elderjs/svelte/chunks/chunk.VLX2NJWY.js",
    "test/public/_elderjs/svelte/components/BlogTeaser.3AUXOWM7.js",
    "test/public/_elderjs/svelte/components/Clock.CHANGED.js",
    "test/public/_elderjs/svelte/components/DisplayHooks.IHTGJQ3I.js",
    "test/public/_elderjs/svelte/components/HookDetail.MCOLEGK2.js",
  ],
  "hooks": "test/build/hooks.js?hash=test",
  "publicCssFile": "/_elderjs/assets/svelte-3bcbf5032efa392596bf0a3f1bdcce7e.css",
  "routes": [
    "test/build/routes/advanced/route.js?hash=test",
    "test/build/routes/blog/route.js?hash=test",
    "test/build/routes/hooks/route.js?hash=test",
    "test/build/routes/simple/route.js?hash=test",
    "test/build/routes/ssr/route.js?hash=test",
  ],
  "server": [
    "test/___ELDER___/compiled/components/BlogTeaser.js?hash=test",
    "test/___ELDER___/compiled/components/Clock.js?hash=test",
    "test/___ELDER___/compiled/components/DisplayHooks.js?hash=test",
    "test/___ELDER___/compiled/components/HookDetail.js?hash=test",
    "test/___ELDER___/compiled/layouts/Layout.js?hash=test",
    "test/___ELDER___/compiled/routes/advanced/Advanced.js?hash=test",
    "test/___ELDER___/compiled/routes/blog/Blog.js?hash=test",
    "test/___ELDER___/compiled/routes/hooks/Hooks.js?hash=test",
    "test/___ELDER___/compiled/routes/simple/Simple.js?hash=test",
    "test/___ELDER___/compiled/routes/ssr/Ssr.js?hash=test",
  ],
  "shortcodes": "test/build/shortcodes.js?hash=test",
}
`;

exports[`#updateFilesFn 1`] = `
{
  "all": [
    "test/elder.config.ts",
    "test/build/build.js",
    "test/build/cleanPublic.js",
    "test/build/hooks.js",
    "test/build/server.js",
    "test/build/shortcodes.js",
    "test/build/tsconfig.tsbuildinfo",
    "test/build/components/BlogTeaser.svelte",
    "test/build/components/Clock.svelte",
    "test/build/components/DisplayHooks.svelte",
    "test/build/components/HookDetail.svelte",
    "test/build/layouts/Layout.svelte",
    "test/build/routes/advanced/1.basic-route.md",
    "test/build/routes/advanced/Advanced.svelte",
    "test/build/routes/advanced/basic-route.md",
    "test/build/routes/advanced/data-plumbing.md",
    "test/build/routes/advanced/hooks.md",
    "test/build/routes/advanced/partial-hydration.md",
    "test/build/routes/advanced/plugins.md",
    "test/build/routes/advanced/prop-compression.md",
    "test/build/routes/advanced/route.js",
    "test/build/routes/advanced/routing.md",
    "test/build/routes/advanced/shortcodes.md",
    "test/build/routes/advanced/ssr.md",
    "test/build/routes/advanced/stacks.md",
    "test/build/routes/blog/Blog.svelte",
    "test/build/routes/blog/getting-started.md",
    "test/build/routes/blog/home.md",
    "test/build/routes/blog/how-to-build-a-blog-with-elderjs.md",
    "test/build/routes/blog/is-elderjs-right-for-you.md",
    "test/build/routes/blog/route.js",
    "test/build/routes/hooks/Hooks.svelte",
    "test/build/routes/hooks/route.js",
    "test/build/routes/simple/Simple.svelte",
    "test/build/routes/simple/route.js",
    "test/build/routes/ssr/Ssr.svelte",
    "test/build/routes/ssr/route.js",
    "test/___ELDER___/compiled/components/BlogTeaser.js",
    "test/___ELDER___/compiled/components/Clock.js",
    "test/___ELDER___/compiled/components/DisplayHooks.js",
    "test/___ELDER___/compiled/components/HookDetail.js",
    "test/___ELDER___/compiled/layouts/Layout.js",
    "test/___ELDER___/compiled/routes/advanced/Advanced.js",
    "test/___ELDER___/compiled/routes/blog/Blog.js",
    "test/___ELDER___/compiled/routes/hooks/Hooks.js",
    "test/___ELDER___/compiled/routes/simple/Simple.js",
    "test/___ELDER___/compiled/routes/ssr/Ssr.js",
    "test/public/_elderjs/svelte/chunks/chunk.BFER7IGE.js",
    "test/public/_elderjs/svelte/chunks/chunk.VLX2NJWY.js",
    "test/public/_elderjs/svelte/components/BlogTeaser.3AUXOWM7.js",
    "test/public/_elderjs/svelte/components/Clock.RXDT3EO6.js",
    "test/public/_elderjs/svelte/components/DisplayHooks.IHTGJQ3I.js",
    "test/public/_elderjs/svelte/components/HookDetail.MCOLEGK2.js",
    "test/public/style copy.css",
    "test/public/style.css",
    "test/public/_elderjs/assets/svelte-3bcbf5032efa392596bf0a3f1bdcce7e.css",
  ],
  "client": [
    "test/public/_elderjs/svelte/chunks/chunk.BFER7IGE.js",
    "test/public/_elderjs/svelte/chunks/chunk.VLX2NJWY.js",
    "test/public/_elderjs/svelte/components/BlogTeaser.3AUXOWM7.js",
    "test/public/_elderjs/svelte/components/Clock.RXDT3EO6.js",
    "test/public/_elderjs/svelte/components/DisplayHooks.IHTGJQ3I.js",
    "test/public/_elderjs/svelte/components/HookDetail.MCOLEGK2.js",
  ],
  "hooks": "test/build/hooks.js?hash=test",
  "publicCssFile": "/_elderjs/assets/svelte-3bcbf5032efa392596bf0a3f1bdcce7e.css",
  "routes": [
    "test/build/routes/advanced/route.js?hash=test",
    "test/build/routes/blog/route.js?hash=test",
    "test/build/routes/hooks/route.js?hash=test",
    "test/build/routes/simple/route.js?hash=test",
    "test/build/routes/ssr/route.js?hash=test",
  ],
  "server": [
    "test/___ELDER___/compiled/components/BlogTeaser.js?hash=test",
    "test/___ELDER___/compiled/components/Clock.js?hash=test",
    "test/___ELDER___/compiled/components/DisplayHooks.js?hash=test",
    "test/___ELDER___/compiled/components/HookDetail.js?hash=test",
    "test/___ELDER___/compiled/layouts/Layout.js?hash=test",
    "test/___ELDER___/compiled/routes/advanced/Advanced.js?hash=test",
    "test/___ELDER___/compiled/routes/blog/Blog.js?hash=test",
    "test/___ELDER___/compiled/routes/hooks/Hooks.js?hash=test",
    "test/___ELDER___/compiled/routes/simple/Simple.js?hash=test",
    "test/___ELDER___/compiled/routes/ssr/Ssr.js?hash=test",
  ],
  "shortcodes": "test/build/shortcodes.js?hash=test",
}
`;

exports[`#updateFilesFn 2`] = `
{
  "all": [
    "test/elder.config.ts",
    "test/build/build.js",
    "test/build/cleanPublic.js",
    "test/build/hooks.js",
    "test/build/server.js",
    "test/build/shortcodes.js",
    "test/build/tsconfig.tsbuildinfo",
    "test/build/components/BlogTeaser.svelte",
    "test/build/components/Clock.svelte",
    "test/build/components/DisplayHooks.svelte",
    "test/build/components/HookDetail.svelte",
    "test/build/layouts/Layout.svelte",
    "test/build/routes/advanced/1.basic-route.md",
    "test/build/routes/advanced/Advanced.svelte",
    "test/build/routes/advanced/basic-route.md",
    "test/build/routes/advanced/data-plumbing.md",
    "test/build/routes/advanced/hooks.md",
    "test/build/routes/advanced/partial-hydration.md",
    "test/build/routes/advanced/plugins.md",
    "test/build/routes/advanced/prop-compression.md",
    "test/build/routes/advanced/route.js",
    "test/build/routes/advanced/routing.md",
    "test/build/routes/advanced/shortcodes.md",
    "test/build/routes/advanced/ssr.md",
    "test/build/routes/advanced/stacks.md",
    "test/build/routes/blog/Blog.svelte",
    "test/build/routes/blog/getting-started.md",
    "test/build/routes/blog/home.md",
    "test/build/routes/blog/how-to-build-a-blog-with-elderjs.md",
    "test/build/routes/blog/is-elderjs-right-for-you.md",
    "test/build/routes/blog/route.js",
    "test/build/routes/hooks/Hooks.svelte",
    "test/build/routes/hooks/route.js",
    "test/build/routes/simple/Simple.svelte",
    "test/build/routes/simple/route.js",
    "test/build/routes/ssr/Ssr.svelte",
    "test/build/routes/ssr/route.js",
    "test/___ELDER___/compiled/components/BlogTeaser.js",
    "test/___ELDER___/compiled/components/Clock.js",
    "test/___ELDER___/compiled/components/DisplayHooks.js",
    "test/___ELDER___/compiled/components/HookDetail.js",
    "test/___ELDER___/compiled/layouts/Layout.js",
    "test/___ELDER___/compiled/routes/advanced/Advanced.js",
    "test/___ELDER___/compiled/routes/blog/Blog.js",
    "test/___ELDER___/compiled/routes/hooks/Hooks.js",
    "test/___ELDER___/compiled/routes/simple/Simple.js",
    "test/___ELDER___/compiled/routes/ssr/Ssr.js",
    "test/public/_elderjs/svelte/chunks/chunk.BFER7IGE.js",
    "test/public/_elderjs/svelte/chunks/chunk.VLX2NJWY.js",
    "test/public/_elderjs/svelte/components/BlogTeaser.3AUXOWM7.js",
    "test/public/_elderjs/svelte/components/Clock.CHANGED.js",
    "test/public/_elderjs/svelte/components/DisplayHooks.IHTGJQ3I.js",
    "test/public/_elderjs/svelte/components/HookDetail.MCOLEGK2.js",
    "test/public/style copy.css",
    "test/public/style.css",
    "test/public/_elderjs/assets/svelte-3bcbf5032efa392596bf0a3f1bdcce7e.css",
  ],
  "client": [
    "test/public/_elderjs/svelte/chunks/chunk.BFER7IGE.js",
    "test/public/_elderjs/svelte/chunks/chunk.VLX2NJWY.js",
    "test/public/_elderjs/svelte/components/BlogTeaser.3AUXOWM7.js",
    "test/public/_elderjs/svelte/components/Clock.CHANGED.js",
    "test/public/_elderjs/svelte/components/DisplayHooks.IHTGJQ3I.js",
    "test/public/_elderjs/svelte/components/HookDetail.MCOLEGK2.js",
  ],
  "hooks": "test/build/hooks.js?hash=test",
  "publicCssFile": "/_elderjs/assets/svelte-3bcbf5032efa392596bf0a3f1bdcce7e.css",
  "routes": [
    "test/build/routes/advanced/route.js?hash=test",
    "test/build/routes/blog/route.js?hash=test",
    "test/build/routes/hooks/route.js?hash=test",
    "test/build/routes/simple/route.js?hash=test",
    "test/build/routes/ssr/route.js?hash=test",
  ],
  "server": [
    "test/___ELDER___/compiled/components/BlogTeaser.js?hash=test",
    "test/___ELDER___/compiled/components/Clock.js?hash=test",
    "test/___ELDER___/compiled/components/DisplayHooks.js?hash=test",
    "test/___ELDER___/compiled/components/HookDetail.js?hash=test",
    "test/___ELDER___/compiled/layouts/Layout.js?hash=test",
    "test/___ELDER___/compiled/routes/advanced/Advanced.js?hash=test",
    "test/___ELDER___/compiled/routes/blog/Blog.js?hash=test",
    "test/___ELDER___/compiled/routes/hooks/Hooks.js?hash=test",
    "test/___ELDER___/compiled/routes/simple/Simple.js?hash=test",
    "test/___ELDER___/compiled/routes/ssr/Ssr.js?hash=test",
  ],
  "shortcodes": "test/build/shortcodes.js?hash=test",
}
`;
